k3s-install/roles/jenkins/files/jenkins-ingress.yml
## nextcloud.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "jenkins" # Same namespace as the deployment
  name: "jenkins-ingress" # Name of the ingress (see kubectl get ingress -A)
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   cert-manager.io/cluster-issuer: "nginx-clusterissuer" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
  #   nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  ingressClassName: nginx
  rules:
  - host: "jenkins.192.168.0.240.nip.io"
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: "jenkins"
              port:
                number: 8080
---
